add: url field
